# Turkish-language

./: .env.example  .flake8  .gitignore  DEPLOYMENT.md  FRONTEND_MODEL_DISPLAY.md  GETTING_STARTED.md  README.md  TURKISH_GRAMMAR_GUIDE.md  UI_MOCKUP.txt  config.toml  fix_tense_affix_overlaps.py  grammar_exercises.md  grammer_metadata.py  mismatched_examples.json  package.json  pyproject.toml  regenerate_missing.py  requirements.txt  setup.sh  turkish-possessive-constructions-exercise.html
.github/workflows/: deploy.yml  regenerate-indexes.yml
data/: navigation_index.json  navigation_summary.json  tense_level_mapping.json  verb_tense_exclusions.json  verbs_index.json
data/input/: verbs.csv
frontend/: .eslintrc.yml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: .htaccess  test-navigation.html
frontend/src/: App.tsx  index.css
pipelines/: README.md  consolidate_training_examples.py  create_traing_example.py  find_verb_mismatches.py  fix_verb_affixes.py  fix_verb_english_names.py  fix_verb_ranks.py  generate_navigation_index.py  grammer_metadata.py  validate_existing_examples.py  validate_training_examples.py
prompts/: create_training_example.prompt.md  create_training_example_batch.prompt.md  create_training_example_v2.prompt.md  dev_create_frontend.md
tests/: conftest.py  list_gemini_models.py  test_azure_connection.py  test_dial_api_connection.py  test_gemini_connection.py  test_generate_example.py  test_generate_examples.py  test_generate_training_example.py  test_llm_logging.py
(+27244 files in other folders)
